--- a/docs/Histoire/H1.md
+++ b/docs/Histoire/H1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Qu'est ce que l'impression 3D
+title: Qu'est ce que l'impression 3D ?
 parent: L'histoire de l'impression 3D
 nav_order: 1
 ---
