--- a/docs/Histoire/H1.md
+++ b/docs/Histoire/H1.md
@@ -4,3 +4,26 @@ title: Qu'est ce que l'impression 3D ?
 parent: L'histoire de l'impression 3D
 nav_order: 1
 ---
+
+## Qu'est ce que l'impression 3D ?
+
+L’impression 3D, également appelée fabrication additive, est une technologie qui permet de créer des objets physiques à partir de modèles numériques. Contrairement aux méthodes traditionnelles d’usinage qui consistent à retirer de la matière d’un bloc brut, l’impression 3D repose sur un principe d’ajout de matière couche par couche jusqu’à obtenir la forme finale de l’objet.
+
+Le processus débute par la modélisation d’un objet en 3D à l’aide de logiciels spécialisés comme Fusion 360 ou Onshape. Une fois le modèle terminé, il est exporté dans un format compatible avec les imprimantes 3D, généralement en .STL. Ce fichier est ensuite traité par un logiciel de découpe appelé slicer, tel que Cura.. Ce programme découpe virtuellement le modèle en fines couches et génère un fichier G-code, qui contient les instructions précises que l’imprimante doit suivre.
+
+L’impression elle-même consiste à déposer, couche par couche, le matériau choisi. Selon la technologie utilisée, cette matière peut être du plastique fondu, de la résine liquide durcie par UV ou une autre méthode encore. Chaque couche se solidifie progressivement jusqu’à former l’objet complet. Une fois l’impression terminée, certaines finitions sont souvent nécessaires, comme le ponçage, la peinture ou l'assemblage.
+
+Il existe plusieurs technologies d’impression 3D. La plus répandue est la méthode FDM (Fused Deposition Modeling), qui utilise du filament plastique fondu pour créer les objets. D'autres techniques comme la SLA (Stereolithography) ou la SLS (Selective Laser Sintering) sont privilégiées pour obtenir des pièces plus détaillées ou plus résistantes.
+
+L’impression 3D est aujourd’hui largement utilisée dans de nombreux domaines. Dans l’industrie, elle permet de réaliser rapidement des prototypes et des pièces personnalisées. En médecine, elle est exploitée pour produire des prothèses, des implants et des modèles anatomiques. Le secteur de l’architecture l'utilise aussi pour concevoir des maquettes précises.
+
+Bien que l’impression 3D présente de nombreux avantages elle comporte aussi certaines limites. La durée des impressions peut être longue, et les pièces nécessitent souvent un post-traitement pour améliorer leur finition ou leur résistance.
+
+En résumé, l’impression 3D est une technologie révolutionnaire qui transforme les méthodes de fabrication traditionnelles. Son évolution rapide et sa démocratisation en font aujourd’hui un outil incontournable dans de nombreux secteurs, du prototypage industriel aux projets créatifs personnels.
+
+
+
+
+
+
+
