--- a/docs/Histoire/H2.md
+++ b/docs/Histoire/H2.md
@@ -4,3 +4,26 @@ title: Les années 70-80
 parent: L'histoire de l'impression 3D
 nav_order: 2
 ---
+
+## L’impression 3D dans les années 70-80
+
+L’histoire de l’impression 3D trouve ses racines dans les années 70 et 80, période marquée par les premières innovations en matière de fabrication additive. Bien que les technologies modernes aient fortement évolué, les bases de l'impression 3D ont été posées à cette époque.
+
+L’un des premiers concepts associés à l’impression 3D est celui de la stéréolithographie. En 1981, le chercheur japonais Hideo Kodama a développé une méthode de fabrication basée sur la photopolymérisation. Cette technique consistait à utiliser une résine liquide photosensible qui durcissait sous l’action d’une lumière UV pour former des objets en couches successives. Ce procédé est souvent considéré comme la première tentative concrète de ce que nous appelons aujourd’hui l’impression 3D.
+
+![Hideo Kodama](images/Hideo.jpg)
+
+Au cours de la même période, les avancées technologiques ont permis le développement de concepts fondamentaux tels que la création de modèles numériques découpés en tranches et l’utilisation de têtes d’impression contrôlées par ordinateur pour déposer la matière de façon précise.
+
+C’est également dans les années 80 que l’ingénieur américain Chuck Hull a révolutionné cette technologie en développant et brevetant en 1984 le premier véritable système de stéréolithographie. Il fonda peu après la société 3D Systems, qui commercialisa en 1987 la première imprimante 3D commerciale, la SLA-1.
+
+![Chuck Hull](images/Chuck.jpg)
+
+Cette période marque donc les prémices de l’impression 3D, avec des concepts innovants qui allaient progressivement donner naissance aux technologies modernes que nous utilisons aujourd’hui.
+
+
+
+
+
+
+
