--- a/docs/Histoire/H4.md
+++ b/docs/Histoire/H4.md
@@ -4,3 +4,13 @@ title: La multiplicité des technologies durant les années 90
 parent: L'histoire de l'impression 3D
 nav_order: 4
 ---
+
+## La multiplicité des technologies durant les années 90
+
+Les années 1990 ont marqué une étape clé dans le développement de l’impression 3D avec l’émergence de nouvelles technologies et leur diversification. Cette décennie a vu l’impression 3D s’imposer progressivement dans le monde industriel, ouvrant la voie à des applications toujours plus variées.
+
+La décennie a également vu la diversification des matériaux utilisables. Alors que les premières imprimantes 3D se limitaient aux résines liquides ou aux plastiques de base, les années 90 ont vu l’introduction de matériaux plus avancés tels que les poudres métalliques et les céramiques. Ces avancées ont permis de répondre aux besoins croissants des secteurs industriels, notamment dans l'aéronautique, l’automobile et la médecine.
+
+Enfin, les années 90 ont marqué les premiers pas vers la démocratisation de l’impression 3D. Bien que les machines restaient coûteuses et destinées principalement aux grandes entreprises, l’intérêt croissant pour ces technologies a posé les bases de la popularisation que l’on connaît aujourd’hui.
+
+Cette période a donc été déterminante dans l’évolution de l’impression 3D, permettant à de nouvelles techniques de voir le jour et à cette technologie de prendre une place grandissante dans le monde industriel et scientifique.
