--- a/docs/Histoire/H3.md
+++ b/docs/Histoire/H3.md
@@ -13,11 +13,15 @@ En 1986, Chuck Hull, déjà reconnu pour son invention du procédé de SLA, fond
 
 Parallèlement, en 1988, une nouvelle technologie baptisée SLS fut développée par Carl Deckard, un étudiant à l’Université du Texas. Cette méthode innovante utilisait un laser puissant pour fusionner de la poudre polymère couche par couche, permettant de produire des pièces solides et résistantes sans support structurel supplémentaire. Le procédé SLS a rapidement trouvé des applications industrielles dans la production de prototypes fonctionnels et de pièces techniques complexes.
 
-![Carl Deckard](../images/Carl.jpg)
+<p align="center">
+  <img src="../images/Carl.jpg" alt="Carl Deckard" width="400px" style="display: block; margin: auto;" />
+</p>
 
 La même année, la société Stratasys, fondée par Scott Crump, introduisit la technologie FDM. Cette méthode, plus accessible et plus abordable, repose sur le dépôt de filament plastique fondu couche par couche. Le procédé FDM est aujourd’hui l’une des technologies les plus répandues dans les imprimantes 3D domestiques et professionnelles.
 
-![Carl Deckard](../images/Scott.jpg)
+<p align="center">
+  <img src="../images/Scott.jpg" alt="Scott" width="400px" style="display: block; margin: auto;" />
+</p>
 
 Ces années ont marqué le passage de l’impression 3D d’une technologie expérimentale à une solution industrielle prometteuse. Grâce à ces avancées, les bases techniques utilisées dans les imprimantes 3D modernes ont été définies, ouvrant la voie à une large adoption dans les secteurs du prototypage rapide, de l’aéronautique, de la médecine et de l’ingénierie.
 
