--- a/docs/Histoire/H5.md
+++ b/docs/Histoire/H5.md
@@ -11,7 +11,9 @@ Les années 2000 marquent un véritable tournant dans l’histoire de l’impres
 
 En 2004, Adrian Bowyer, un professeur d’ingénierie mécanique à l'Université de Bath au Royaume-Uni, lança le projet RepRap. L’objectif ambitieux de ce projet était de développer une imprimante 3D autoreproductible capable d’imprimer la majorité de ses propres composants. Cette approche visait à rendre l’impression 3D plus accessible au grand public, en proposant une machine abordable et facilement reproductible.
 
-![Adrian Bowyer](../images/Adrian.jpg)
+<p align="center">
+  <img src="../images/Adrian.jpg" alt="Adrian Bowyer" width="400px" style="display: block; margin: auto;" />
+</p>
 
 Le projet RepRap s’inscrit dans la philosophie de l’open-source, ce qui signifie que toutes les conceptions, schémas et logiciels associés étaient librement accessibles, permettant ainsi à quiconque de fabriquer et d’améliorer la machine. Cette approche collaborative a joué un rôle clé dans la popularisation de l’impression 3D personnelle.
 
@@ -19,7 +21,9 @@ Le développement de ce projet a également été grandement facilité par l’e
 
 Le premier modèle fonctionnel issu de ce projet, appelé Darwin, vit le jour en 2007. La Darwin fut la première imprimante 3D capable de produire certaines de ses propres pièces structurelles, incarnant parfaitement le concept d’autoréplication. Bien que rudimentaire en comparaison aux modèles actuels, cette machine posait les bases des imprimantes 3D modernes et ouvrait la voie à une nouvelle ère d’innovation.
 
-![Adrian Bowyer](../images/imprimante_darwin.jpg)
+<p align="center">
+  <img src="../images/imprimante_darwin.jpg" alt="Imp_darwin" width="400px" style="display: block; margin: auto;" />
+</p>
 
 Le succès du projet RepRap a rapidement inspiré de nombreux passionnés et développeurs à travers le monde, donnant naissance à une large communauté de makers. Ce mouvement a favorisé l’émergence de modèles améliorés tels que la Mendel, la Prusa ou encore la Huxley, rendant les imprimantes 3D de plus en plus accessibles et performantes.
 
