--- a/docs/Histoire/H5.md
+++ b/docs/Histoire/H5.md
@@ -22,7 +22,8 @@ Le développement de ce projet a également été grandement facilité par l’e
 Le premier modèle fonctionnel issu de ce projet, appelé Darwin, vit le jour en 2007. La Darwin fut la première imprimante 3D capable de produire certaines de ses propres pièces structurelles, incarnant parfaitement le concept d’autoréplication. Bien que rudimentaire en comparaison aux modèles actuels, cette machine posait les bases des imprimantes 3D modernes et ouvrait la voie à une nouvelle ère d’innovation.
 
 <p align="center">
-  <img src="../images/imprimante_darwin.jpg" alt="Imp_darwin" width="400px" style="display: block; margin: auto;" />
+  <img src="../images/imprimante_darwin.jpg" alt="Imprimante Darwin" width="400px" style="border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+  <br><small><i>Première imprimante 3D auto-réplicable : Darwin</i></small>
 </p>
 
 Le succès du projet RepRap a rapidement inspiré de nombreux passionnés et développeurs à travers le monde, donnant naissance à une large communauté de makers. Ce mouvement a favorisé l’émergence de modèles améliorés tels que la Mendel, la Prusa ou encore la Huxley, rendant les imprimantes 3D de plus en plus accessibles et performantes.
