--- a/docs/Histoire/H6.md
+++ b/docs/Histoire/H6.md
@@ -4,3 +4,19 @@ title: Les imprimantes d'aujourd'hui
 parent: L'histoire de l'impression 3D
 nav_order: 6
 ---
+
+# Les imprimantes d'aujourd'hui
+
+Depuis les débuts du projet RepRap, l’impression 3D a connu une évolution rapide et remarquable. Ce qui était autrefois une technologie de niche réservée aux laboratoires ou aux passionnés est devenu aujourd’hui un outil accessible, fiable et polyvalent. Les imprimantes 3D modernes se déclinent en de nombreuses variantes adaptées à des usages allant du loisir à l’industrie.
+
+La technologie la plus répandue reste l’impression FDM (Fused Deposition Modeling), qui consiste à faire fondre un filament plastique pour le déposer couche par couche. Ces imprimantes sont aujourd’hui très abordables avec des modèles comme la Creality Ender, la Prusa MK4 ou encore l’Anycubic Kobra qui offrent d’excellents résultats tout en restant faciles à utiliser. Grâce à de nombreuses améliorations comme le nivellement automatique du plateau, le capteur de fin de filament ou encore les interfaces tactiles, ces imprimantes sont devenues beaucoup plus intuitives.
+
+Parallèlement, les imprimantes à résine (SLA ou DLP) ont gagné en popularité. Bien qu’un peu plus contraignantes à utiliser en raison de la manipulation de la résine liquide et du nettoyage des pièces, elles offrent une précision impressionnante, idéale pour des domaines comme la joaillerie, les figurines ou le domaine médical. Elles sont désormais bien plus accessibles, avec des marques comme Elegoo, Anycubic ou Phrozen proposant des modèles abordables.
+
+À un niveau plus professionnel, on trouve des technologies comme le SLS (Selective Laser Sintering), qui permet de fusionner de la poudre plastique sans avoir besoin de supports d’impression. Ces machines sont surtout utilisées dans l’industrie ou le prototypage avancé.
+
+Aujourd’hui, l’impression 3D trouve des applications dans de nombreux domaines. À la maison, on l’utilise pour imprimer des objets du quotidien, des pièces de rechange ou des créations artistiques. Dans l’éducation, elle est un excellent support pédagogique pour initier les élèves à la conception 3D. Dans le monde professionnel, elle s’impose dans les secteurs de la santé, de l’aéronautique, de la recherche ou encore de l’architecture.
+
+Grâce à l’esprit open source initié par RepRap, de nombreuses plateformes telles que Thingiverse, Printables ou Cults3D permettent aux utilisateurs de partager et de télécharger librement des modèles 3D. La communauté autour de l’impression 3D reste très active, continuant à faire évoluer les machines, les matériaux et les usages.
+
+Les imprimantes 3D d’aujourd’hui ne sont plus seulement des outils d’expérimentation : elles sont devenues de véritables alliées de la créativité, de la réparation, et de l’innovation accessible à tous.
